# tower-camkes-odroid

./: .gitignore  .travis.yml  Makefile  Makefile.deps  Makefile.sandbox  README.md  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.2.yaml  stack-8.0.yaml  stack.yaml  tower-camkes-odroid.cabal
data/camera_vm/: othercamkestargets.mk
data/camera_vm/components/VM/src/: vchan_copy.h  vchan_sharemem.h
data/camera_vm/components/camera_vm/: camera_vm.camkes  camera_vm.camkes.template
data/camera_vm/components/camera_vm/include/: smaccm_camera_vm.h
data/camera_vm/components/camera_vm/src/: camera_vm.c  smaccm_camera_vm.c.template
data/can/: othercamkestargets.mk
data/can/components/can/src/: dev.c
data/can/components/can_node/: can_node.camkes
data/can/components/can_node/src/: can_node.c
data/uart/components/uart/: uart.camkes
data/uart/components/uart/src/: driver.c  smaccm_uart.c
data/uart/components/uart_monitor/: uart_monitor.camkes
data/uart/components/uart_monitor/src/: driver.c
src/Tower/Odroid/: CAN.hs  CameraVM.hs  Serial.hs  UART.hs
test/: CANTest.hs  CameraVMTest.hs  SerialTest.hs
test/camera_vm/: CameraVMTest.hs
test/camera_vm/camera_vm_artifacts/: camkesmakefile.mk
test/camera_vm/camera_vm_test_out/components/camera_vm/src/: camera_vm.c
